staging for aws

--- a/about.html
+++ b/about.html
@@ -7,19 +7,19 @@
 
     <header class="header">
         <nav class="navbar">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo_cropped.svg" alt="Logo Description">
                 </a>
             <ul class="nav-links">
                 <li class="nav-item">
-                    <a href="#" class="portfolio-link">Portfolio</a>
+                    <a href="index.html" class="portfolio-link">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
             </ul>
         </nav>
-    </header>    
+    </header>       
 
     <div class="container">
         <div class="profile-section">
@@ -29,8 +29,8 @@
                 <h2>&#128075</h2>
                 <p>
                     Hi! Thanks for checking out my website and photos. My name is Ryan Wilkinson and I&#8217m an MBA student currently living in NYC. I&#8217m originally from Charlotte, NC. 
-                    <br>
-                    I got into photography a year ago as a creative outlet and way to capture inspiring moments. I consider myself a landscape photographer but I&#8217m still exploring all areas of photography. My primary setup is a Sony a7iii paired with a 24-105mm f/4.0 lens. Please email me at ryancwilkinson@me.com if you have any feedback on my photos!
+                    </p>
+                    <p>I got into photography a year ago as a creative outlet and way to capture inspiring moments. I consider myself a landscape photographer but I&#8217m still exploring all areas of photography. My primary setup is a Sony a7iii paired with a 24-105mm f/4.0 lens. Please reach out if you have any feedback on my photos!
                 </p>
             </div>
         </div>
@@ -43,9 +43,9 @@
                 <h2>Connect</h2>
                 <hr class="heading-break">
                 <!-- Add your design skills details here -->
-                <p><a href="mailto:ryancwilkinson@me.com">ryancwilkinson@me.com</a></p>
-                <p>ig / @rcwilkin</p>
-                <p>li / linkedin.in/rcwilkin</p>
+                <p><a class="profile-link" href="mailto:ryancwilkinson@me.com">ryancwilkinson@me.com</a></p>
+                <p><a class="profile-link" href="https://www.instagram.com/rcwilkin/ig"> ig / @rcwilkin</a></p>
+                <p><a class="profile-link" href="https://www.linkedin.com/in/rcwilkin/"> li / linkedin.in/rcwilkin</a></p>
             </div>
             <div class="column">
                 <!-- Education Column -->
