--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <header class="header">
         <nav class="navbar">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="img/logo_cropped.svg" alt="Logo Description">
                 </a>
             <ul class="nav-links">
@@ -16,7 +16,7 @@
                     <a href="#" class="portfolio-link">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
             </ul>
         </nav>
@@ -30,7 +30,7 @@
 
         <div class="button-container">
             <button type="button" class="btn portfolio-btn">Portfolio&nbsp; <i class="fas fa-arrow-down"></i></button>
-            <button type="button" class="btn" >About Me&nbsp; <i class="fas fa-arrow-down"></i></button>
+            <button type="button" class="btn" >About Me</button>
         </div>
         </section>
 
