new picture, fixed formatting, added graphics

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
                 </a>
             <ul class="nav-links">
                 <li class="nav-item">
-                    <a href="index.html" class="portfolio-link">Portfolio</a>
+                    <a href="index.html#portfolio" class="portfolio-link">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html">About</a>
@@ -22,12 +22,13 @@
         </nav>
     </header>       
 
+    <div class="centered-content">
     <div class="container">
         <div class="profile-section">
             <img src="img/banff-social.jpeg" alt="Lisa Fischer" class="profile-pic">
             <div class="profile-text">
                 <h1>Ryan Wilkinson</h1>
-                <h2>&#128075</h2>
+                <h2 id="hand-emoji">&#128075</h2>
                 <p>
                     Hi! Thanks for checking out my website and photos. My name is Ryan Wilkinson and I&#8217m an MBA student currently living in NYC. I&#8217m originally from Charlotte, NC. 
                     </p>
@@ -86,5 +87,7 @@
             </div>
         </div>
     </div>
+</div>
+<script src="script.js"></script>
 
 </body>
