--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
         <div class="button-container">
             <button type="button" class="btn portfolio-btn">Portfolio&nbsp; <i class="fas fa-arrow-down"></i></button>
-            <button type="button" class="btn" >About Me</button>
+            <a href="about.html">
+                <button type="button" class="btn">About Me</button>
+            </a>
         </div>
         </section>
 
@@ -58,6 +60,9 @@
             <div class="portrait-item">
             </div>
         </div>
+
+        <img class="landscape" src="portfolio-img/copenhagen-building.jpg">
+        <p class="image-description">Axel Towers, Copenhagen</p>
     </section>
     <script src="script.js"></script>
 
