grammar and photo update

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                 <h3>Amazon</h3>
                 <p>Sr. Product Manager, Tech Intern<br><i>2023</i></p>
                 <h3>Vanguard</h3>
-                <p>Data Scientists<br><i>2020-2022</i></p>
+                <p>Data Scientist<br><i>2020-2022</i></p>
                 <h3>Vanguard</h3>
                 <p>Data Analyst<br><i>2019-2020</i></p>
                 <h3>Vanguard</h3>
