added lake louise

--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
         
         <div class="portrait-container">
             <div class="portrait-item">
+                <img class="portrait" src="portfolio-img/lakelouise.jpg">
+                <p class="image-description">Lake Louise Banff, CA</p>
+            </div>
+            <div class="portrait-item">
                 <img class="portrait" src="portfolio-img/seattle-library.jpg">
                 <p class="image-description">Public Libracy in Seattle, WA</p>
             </div>
-            <div class="portrait-item">
-            </div>
+
         </div>
 
         <img class="landscape" src="portfolio-img/copenhagen-building.jpg">
