--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>About</title>
+    <link rel="shortcut icon" type="image/svg" href="img/favicon.svg">
     <link rel="stylesheet" href="styles-about.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
