--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="portrait-item">
                 <img class="portrait" src="portfolio-img/seattle-library.jpg">
-                <p class="image-description">Public Libracy in Seattle, WA</p>
+                <p class="image-description">Public Library in Seattle, WA</p>
             </div>
 
         </div>
