added tokyo photo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
 
         <img class="landscape" src="portfolio-img/copenhagen-building.jpg">
         <p class="image-description">Axel Towers, Copenhagen</p>
+
+        <img class="landscape" src="portfolio-img/tokyo-kabukicho.jpg">
+        <p class="image-description">Kabukicho, Tokyo</p>
     </section>
+
+
+
     <script src="script.js"></script>
 
 </body>
