--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
     <section class="portfolio-img" id="portfolioSection">
         <img class="landscape" src="portfolio-img/osaka-streets.jpg">
         <p class="image-description">Streets of Osaka, Japan</p>
+
+        <img class="landscape" src="portfolio-img/tokyo-kabukicho.jpg">
+        <p class="image-description">Kabukicho, Tokyo</p>
         
         <div class="portrait-container">
             <div class="portrait-item">
                 <img class="portrait" src="portfolio-img/banff-morraine.jpg">
-                <p class="image-description">Canoes in Morraine</p>
+                <p class="image-description">Canoes in Morraine, Canada</p>
             </div>
             <div class="portrait-item">
                 <img class="portrait" src="portfolio-img/morraine-mountains.jpg">
@@ -57,11 +60,11 @@
         <div class="portrait-container">
             <div class="portrait-item">
                 <img class="portrait" src="portfolio-img/lakelouise.jpg">
-                <p class="image-description">Lake Louise Banff, CA</p>
+                <p class="image-description">Lake Louise Banff, Canada</p>
             </div>
             <div class="portrait-item">
                 <img class="portrait" src="portfolio-img/seattle-library.jpg">
-                <p class="image-description">Public Library in Seattle, WA</p>
+                <p class="image-description">Public Library in Seattle, Washington</p>
             </div>
 
         </div>
@@ -69,8 +72,6 @@
         <img class="landscape" src="portfolio-img/copenhagen-building.jpg">
         <p class="image-description">Axel Towers, Copenhagen</p>
 
-        <img class="landscape" src="portfolio-img/tokyo-kabukicho.jpg">
-        <p class="image-description">Kabukicho, Tokyo</p>
     </section>
 
 
